@@ -38,7 +38,7 @@ echo "[done]</p>";
 
 echo "<p>Updating schema version... ";
 
-$query = "UPDATE ".cms_db_prefix()."version SET version = 7";
+$query = "UPDATE ".cms_db_prefix()."version SET version = 8";
 $db->Execute($query);
 
 echo "[done]</p>";
