@@ -20,6 +20,8 @@ is actually used on.
 * Changed all user lists to be ordered by username (#000039)
 * Changed add content so that the alias is based off of menutext instead of
 the title
+* Changed upgrade script so that it always clears the cache directories even
+if there is no schema change.
 * Fixed add and edit content pages so that the alias field is more intelligent
 when auto_alias_content is on (#000043)
 * Fixed login to redirect back to originally requested link
